Fix vertical centering for all screen sizes
If the content exceeds the scroll height, the area wasn't scrolling evenly. The top part of the game grid (cards) was cut off. We were using flex originally but requires a lot more styles to set on various elements. We just need a parent and child to set the appropriate styles to enable vertically centering regardless and if no space to vertically center then content is scrollable with nothing cut off at the top. To do this though with `display: grid;` requires that the parent only has a single child which we have structured with the app root and container.

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,16 @@ body {
   line-height: 1.5;
 }
 
+.app-root {
+  display: grid;
+}
+
+.app-container {
+  margin: auto; /* to center in both directions, along with .app-root grid */
+  max-width: 400px;
+  padding: 1rem;
+}
+
 table {
   border-collapse: collapse;
   border-color: var(--table-row-border-color);
@@ -132,17 +142,6 @@ td {
 .button,
 .move-label {
   padding: .375rem .75rem;
-}
-
-.app-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 400px;
-  padding: 16px;
 }
 
 .ModalBackdrop {
